force-app/main/default/objects/Account/fields/Accept_Email_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Accept_Email_Marketing__c</fullName>
    <label>Accept Email Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>