force-app/main/default/objects/Account/fields/AcceptEmail_Marketing__c.field-meta.xml
<CustomField>
    <fullName>AcceptEmail_Marketing__c</fullName>
    <formula>IF( Accept_Email_Marketing__c =&apos;true&apos;, true, false)</formula>
    <label>Accept Email Marketing</label>
    <type>Checkbox</type>
</CustomField>