force-app/main/default/objects/Account/fields/AcceptEmailMarketing__c.field-meta.xml
<CustomField>
    <fullName>AcceptEmailMarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Email Marketing</label>
    <type>Checkbox</type>
</CustomField>