force-app/main/default/objects/Account/fields/Addres__c.field-meta.xml
<CustomField>
    <fullName>Addres__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>