force-app/main/default/objects/Account/fields/Average_value_of_the_order__c.field-meta.xml
<CustomField>
    <fullName>Average_value_of_the_order__c</fullName>
    <label>Average value of the order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>