force-app/main/default/objects/Account/fields/Average_value_of_the_order_Formula__c.field-meta.xml
<CustomField>
    <fullName>Average_value_of_the_order_Formula__c</fullName>
    <formula>Total_Spent_Rollup__c /  Total_Orders_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average value of the order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>