force-app/main/default/objects/Account/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country/Region</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>