force-app/main/default/objects/Account/fields/Customer_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Level__c</fullName>
    <label>Customer Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>⭐</fullName>
                <default>true</default>
                <label>⭐</label>
            </value>
            <value>
                <fullName>⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>⭐⭐⭐⭐⭐</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>