force-app/main/default/objects/Account/fields/Districttext__c.field-meta.xml
<CustomField>
    <fullName>Districttext__c</fullName>
    <label>District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>