force-app/main/default/objects/Account/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>