force-app/main/default/objects/Account/fields/Is_delete__c.field-meta.xml
<CustomField>
    <fullName>Is_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is delete</label>
    <type>Checkbox</type>
</CustomField>