force-app/main/default/objects/Account/fields/Provincetext__c.field-meta.xml
<CustomField>
    <fullName>Provincetext__c</fullName>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>