force-app/main/default/objects/Account/fields/Total_Orders_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Rollup__c</fullName>
    <label>Total Orders</label>
    <summaryForeignKey>Haravan_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>