force-app/main/default/objects/Account/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <label>Total Spent.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>