force-app/main/default/objects/Account/fields/Total_Spent_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent_Rollup__c</fullName>
    <label>Total Spent</label>
    <summarizedField>Haravan_Order__c.TOTAL_PAYMENT_INCLUDE_SHIP__c</summarizedField>
    <summaryForeignKey>Haravan_Order__c.Customer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>