force-app/main/default/objects/Account/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ward/Commune</label>
    <referenceTo>Ward__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>