force-app/main/default/objects/Account/fields/Wardtext__c.field-meta.xml
<CustomField>
    <fullName>Wardtext__c</fullName>
    <label>Ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>