force-app/main/default/objects/Account/listViews/Danh_s_ch_kh_ch_h_ng.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_kh_ch_h_ng</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>Ordered__c</columns>
    <columns>Total_Spent_Rollup__c</columns>
    <columns>Customer_Level__c</columns>
    <columns>AcceptEmail_Marketing__c</columns>
    <columns>External__c</columns>
    <columns>Provincetext__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Danh sách khách hàng</label>
</ListView>