force-app/main/default/objects/Account/listViews/Danh_s_ch_nh_cung_c_p.listView-meta.xml
<ListView>
    <fullName>Danh_s_ch_nh_cung_c_p</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Supplier</value>
    </filters>
    <label>Danh sách nhà cung cấp</label>
</ListView>